--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ button:hover{background:#0969c7}
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script>
-const UPI_ID = 'smbsmbsmb@ptyes';
+const UPI_ID = 'smbooster1980@oksbi';
 const MERCHANT_NAME = 'Social Media Booster';
 // Multiple valid UTR prefixes
 const UTR_PREFIXES = ["FMPI","ok","T","UTR","utr"];
@@ -262,4 +262,5 @@ renderServices();
 </script>
 </body>
 </html>
+
 
